# gpt-risk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: graph.py  llms.py  main.py  state.py
app/tools/: databricks_rag.py
data_processing/: train_credit_model.py  train_fraud_model.py
src/gpt_risk/: config.py  graph.py  llms.py  main.py
src/gpt_risk/tools/: databricks_rag.py  ml_models.py
tests/: conftest.py  test_graph.py  test_main.py
tests/tools/: test_databricks_rag.py  test_ml_models.py
