[project]
name = "gpt-risk"
version = "0.1.0"
description = "An advanced AI Assistant developed with LangChain, LangGraph, and Python 3.12 to revolutionize risk assessment and mitigation in the banking sector. This project leverages Generative AI to provide real-time, intelligent support for bankers."
authors = [
    {name = "tankhuu",email = "jackiekhuu.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
poetry = "^2.1.3"
langchain = "0.3.26"
langgraph = "0.5.4"
gradio = "5.38.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
scikit-learn = "^1.7.1"
xgboost = "^3.0.2"
pandas = "^2.3.1"
numpy = "^2.3.1"
databricks-langchain = "0.6.0"
langchain-google-genai = "^2.1.8"
langchain-openai = "^0.3.28" # Used as a proxy for other models
httpx = "^0.28.1"
joblib = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
start = "app.main:run_app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"